# goggles

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-audit.yml
config/: settings.py  urls.py
deploy/: Caddyfile.goggles.ipf.dev
fixtures/: sample-audit-log-alice.jsonl  sample-audit-log-bob.jsonl  sample-fork-demo-alice.jsonl  sample-fork-demo-bob.jsonl  sample-fork-demo-carol.jsonl  sample-sensitive-dump.json
forensics/: admin.py  analysis.py  apps.py  ingest.py  models.py  tests.py  urls.py  views.py
forensics/management/commands/: create_upload_token.py  seed_dev.py
forensics/migrations/: 0001_initial.py  0002_remove_auditevent_unique_audit_event_line_hash_per_group_and_more.py  0003_auditfile_source_account_label_and_more.py  0004_auditevent_accepted_relay_urls_and_more.py
forensics/static/forensics/: fonts.css  styles.css  timeline.css  tokens.css
forensics/static/forensics/js/: group-search.js  rowlink.js  tabs.js  theme.js
forensics/static/forensics/js/timeline/: layout.js  main.js  rail.js  render.js
forensics/templates/forensics/: _icons.html  audit_file_detail.html  base.html  dump_detail.html  group_detail.html  group_list.html  incident_detail.html  incident_list.html  upload_log_list.html
templates/registration/: login.html
