[project]
name = "goggles"
version = "0.1.0"
description = "Internal Dark Matter forensic dump explorer"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dj-database-url>=2.3,<3",
    "django>=5.2,<5.3",
    "gunicorn>=26.0.0,<27",
    "psycopg[binary]>=3.2,<4",
]

[dependency-groups]
dev = [
    "ruff>=0.11,<1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["forensics/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
